--- a/config/metrics_config.yaml
+++ b/config/metrics_config.yaml
@@ -5,11 +5,11 @@ metrics:
   saved_training_cycle: 1
   # Provide path to saved model checkpoints.
   chkp_save_path: checkpoint
-  # Fill model_params if computing metrics_only on a pre-trained model
-  # Specify path to Trained Model
-  trained_model_path: <PATH>
-  # Name of Trained Model Config file
-  trained_model_config: config/training_config.yaml 
+  # Fill model_params if computing metrics_only on a pre-trained model else leave blank if running training and metrics
+  # Specify path to Trained Model 
+  trained_model_path: </path/to/trained/model>
+  # Path to Trained Model Config file inside /trained_model_path/ parent directory
+  trained_model_config: </path/to/trained/model>
   # Name of Plotting Config file - Enter file to run plot metrics else if empty run metrics evaluation only
   plotting_config: plotting_config.yaml
   #Evaluate the monchromatic RMSE metric.
