--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ description = 'A software framework to perform Differentiable wavefront-based PS
 dependencies = [
     "numpy>=1.19.2",
     "scipy>=1.5.2",
+    "tensorflow",
     "tensorflow-addons>=0.12.1",
     "tensorflow-estimator>=2.9.0",
     "zernike==0.0.31",
