--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,17 +12,17 @@ maintainers = [
 description = 'A software framework to perform Differentiable wavefront-based PSF modelling.'
 dependencies = [
     "numpy>=1.19.2",
-    "scipy>=1.5.2",
-    "tensorflow",
+    "scipy>=1.11.2",
+    "tensorflow>=2.9.1",
     "tensorflow-addons>=0.12.1",
     "tensorflow-estimator>=2.9.0",
     "zernike==0.0.31",
     "opencv-python>=4.5.1.48",
-    "pillow>=8.1.0",
-    "galsim>=2.3.1",
-    "astropy>=4.1",
+    "pillow>=9.5.0",
+    "galsim>=2.4.11",
+    "astropy>=5.3.3",
     "matplotlib>=3.3.2",
-    "seaborn>=0.11",
+    "seaborn>=0.12.2",
 ]
 version = "1.0.0"
 
