--- a/config/metrics_config.yaml
+++ b/config/metrics_config.yaml
@@ -63,6 +63,9 @@ metrics:
       
       # Hyperparameters for Parametric model 
       param_hparams:
+        # Random seed for Tensor Flow Initialization
+        random_seed: 3877572
+        
         # Parameter for the l2 loss function for the Optical path differences (OPD)/WFE
         l2_param: 0.
       
