--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,10 @@ on:
   pull_request:
     branches:
       - dummy_main
+      .github/workflows/ci.ym
 
 jobs:
   test-full:
-    name: Run CI Tests
     runs-on: [ubuntu-latest, gpu]
 
     strategy: 
@@ -20,8 +20,8 @@ jobs:
         python-version: ["3.10.5"]
 
     steps:
-      - name: Checkout
-      - uses: actions/checkout@v3
+      - name:
+        uses: actions/checkout@v3
       
       - name: Set up Python 3.10.5
         uses: actions/setup-python@v3
