--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
-numpy>=1.19.2
-scipy>=1.5.2
-tensorflow>=2.4.1
+numpy>=1.22.4
+scipy>=1.11.2
+tensorflow>=2.9.1
 tensorflow-addons>=0.12.1
 zernike==0.0.31
-opencv-python>=4.5.1.48
-pillow>=8.1.0
-galsim>=2.3.1
-astropy>=4.1
-matplotlib>=3.3.2
-seaborn>=0.11
+opencv-python>=4.6.0.66
+pillow>=10.0.1
+galsim>=2.4.11
+astropy>=5.3.3
+matplotlib>=3.7.2
+seaborn>=0.12
+pytest-black>=0.3.12
+pytest-cov>=4.1.0
+pytest-emoji>=0.2.0
+pytest-pydocstyle>=2.3.2
