--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,5 +29,9 @@ jobs:
           pip install pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
      
+      - name: Install wavediff
+        run: |
+           pip install .
+       
       - name: Test with pytest
         run: python -m pytest
