--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,10 +22,9 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10.5"
-     
-      - name: Install wavediff
-        run: |
-           pip install .
+
+      - name: Install dependencies
+        run: python -m pip install ".[test]"
        
       - name: Test with pytest
         run: python -m pytest
