--- a/.gitignore
+++ b/.gitignore
@@ -86,7 +86,11 @@ instance/
 
 # Sphinx documentation
 docs/_build/
-source/wf_psf*.rst
+docs/source/wf_psf*.rst
+docs/source/_static/file.png
+docs/source/_static/images/logo_colab.png
+docs/source/_static/minus.png
+docs/source/_static/plus.png
 
 # PyBuilder
 target/
