Changed config param description in metrics_param and docs

--- a/config/metrics_config.yaml
+++ b/config/metrics_config.yaml
@@ -6,8 +6,8 @@ metrics:
   # Metrics-only run: Specify model_params for a pre-trained model else leave blank if running training + metrics
   # Specify path to Parent Directory of Trained Model 
   trained_model_path: </path/to/parent/directory/of/trained/model>
-  # Name of the Trained Model Config file inside /trained_model_path/ parent directory
-  trained_model_config: </path/to/trained/model/config/file>
+  # Name of the Trained Model Config file stored in config sub-directory in the trained_model_path parent directory
+  trained_model_config: <enter name of trained model config file>
   #Evaluate the monchromatic RMSE metric.
   eval_mono_metric_rmse: True
   #Evaluate the OPD RMSE metric.
