--- a/dev/config/PR_config/PR_configs_v0.yaml
+++ b/dev/config/PR_config/PR_configs_v0.yaml
@@ -1,2 +1,2 @@
 ---
-  training_conf: training_config_v0.yaml
+  training_conf: /Users/tl255879/Documents/research/projects/wf-projects/refactor-phase-retrieval/wf-psf/dev/config/PR_config/PR_training_config_v0.yaml
