--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,13 +17,25 @@ jobs:
       - name:
         uses: actions/checkout@v3
       
-      - name: Set up Python 3.10.5
+      - name: Set up Python 3.10.12
         uses: actions/setup-python@v3
         with:
-          python-version: "3.10.5"
+          python-version: "3.10.12"
 
       - name: Install dependencies
         run: python -m pip install ".[test]"
        
       - name: Test with pytest
         run: python -m pytest
+
+  linter_name:
+    name: Run Black formatter
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Run Black formatter
+        uses: rickstaa/action-black@v1
+        with:
+          black_args: ". --check"
