--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-# This workflow will install Python dependencies, run tests, and lint with multiple versions of Python
+# This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
 name: CI
@@ -11,24 +11,19 @@ on:
 
 jobs:
   test-full:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        python-version: ["pypy3.9", "pypy3.10", "3.9", "3.10", "3.11", "3.12"]
+    runs-on: [ubuntu-latest]
 
     steps:
-      - name: Checkout code
+      - name:
         uses: actions/checkout@v3
       
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python 3.10.12
         uses: actions/setup-python@v3
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.10.12"
 
       - name: Install dependencies
         run: python -m pip install ".[test]"
        
       - name: Test with pytest
         run: python -m pytest
-
