--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,8 +52,8 @@ release = [
 ]
 
 test = [
-  "pytest==7.4.4",
-  "pytest-black",
+  "pytest",
+  #"pytest-black",
   "pytest-cases",
   "pytest-cov",
   "pytest-emoji",
@@ -77,7 +77,7 @@ convention = "numpy"
 [tool.pytest.ini_options]
 addopts = [
     "--verbose",
-    "--black",
+    #"--black",
     "--emoji",
     "--cov=wf_psf",
     "--cov-report=term-missing",
