--- a/.github/workflows/ci_manual.yml
+++ b/.github/workflows/ci_manual.yml
@@ -9,14 +9,18 @@ jobs:
   test-full:
     runs-on: [ubuntu-latest]
 
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.10"]
+
     steps:
       - name:
         uses: actions/checkout@v3
       
-      - name: Set up Python 3.10.5
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
-          python-version: "3.10.5"
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: python -m pip install ".[test]"
