Modified to archive build as artifact

--- a/.github/workflows/cd_manual.yml
+++ b/.github/workflows/cd_manual.yml
@@ -31,8 +31,8 @@ jobs:
           sphinx-apidoc -Mfeo docs/source src/wf_psf
           sphinx-build docs/source docs/build
        
-      - name: Deploy API documentation
-        uses: peaceiris/actions-gh-pages@v3.5.9
+      - name: Archive documentation as artifact
+        uses: actions/upload-artifact@v2
         with:
-           github_token: ${{ secrets.GITHUB_TOKEN }}
-           publish_dir: docs/build
+          name: api-docs
+          path: docs/build
