--- a/config/training_config.yaml
+++ b/config/training_config.yaml
@@ -1,14 +1,13 @@
 training:
-  # Run ID name
-  id_name: -coherent_euclid_200stars
+  # ID name
+  id_name: _no_sfe_id-11
   # Name of Data Config file
   data_config: data_config.yaml 
   # Metrics Config file - Enter file to run metrics evaluation else if empty run train only
-  metrics_config: metrics_config.yaml
-  # PSF model parameters
+  metrics_config:
   model_params:
-    # Model type. Options are: 'mccd', 'graph', 'poly, 'param', 'poly_physical'."
-    model_name: poly
+    # Model type. Options are: 'mccd', 'graph', 'poly, 'param', 'physical_poly'."
+    model_name: physical_poly
 
     #Num of wavelength bins to reconstruct polychromatic objects.
     n_bins_lda: 8 
@@ -30,6 +29,9 @@ training:
 
     #Interpolation type for the physical poly model. Options are: 'none', 'all', 'top_K', 'independent_Zk'."
     interpolation_type: None
+    
+    # Interpolation Arguments for the physical polychromatic model
+    interpolation_args: None
 
     # SED intepolation points per bin
     sed_interp_pts_per_bin: 0
@@ -51,16 +53,16 @@ training:
     
     # Hyperparameters for Parametric model 
     param_hparams:
-      # Set the random seed for Tensor Flow Initialization
+      # Random seed for Tensor Flow Initialization
       random_seed: 3877572
       
-      # Set the parameter for the l2 loss function for the Optical path differences (OPD)/WFE
+      # Parameter for the l2 loss function for the Optical path differences (OPD)/WFE
       l2_param: 0.
     
       #Zernike polynomial modes to use on the parametric part.
       n_zernikes: 15
     
-      #Max polynomial degree of the parametric part.  m
+      #Max polynomial degree of the parametric part.  chg to max_deg_param
       d_max: 2  
 
       #Flag to save optimisation history for parametric model
@@ -88,31 +90,31 @@ training:
 
   # Training hyperparameters
   training_hparams:
-  
-    # Batch Size
     batch_size: 32
          
-    # Multi-cyclic Parameters     
     multi_cycle_params:
      
-      # Total number of cycles to perform for training.  
-      total_cycles: 1
+      # Total amount of cycles to perform.  
+      total_cycles: 2
          
       # Train cycle definition. It can be: 'parametric', 'non-parametric', 'complete', 'only-non-parametric' and 'only-parametric'."
       cycle_def: complete
 
-      # Flag to save all cycles. If "True", create a checkpoint at every cycle, else if "False" only save the checkpoint at the end of the training."
+      # Make checkpoint at every cycle or just save the checkpoint at the end of the training."
       save_all_cycles: False
+
+      #"Saved cycle to use for the evaluation. Can be 'cycle1', 'cycle2', ..."
+      saved_cycle: cycle2
    
-      # Learning rates for training the parametric model parameters per cycle.
+      # Learning rates for the parametric parts. It should be a str where numeric values are separated by spaces.
       learning_rate_params: [1.0e-2, 1.0e-2]
  
-      # Learning rates for training the non-parametric model parameters per cycle.
+      # Learning rates for the non-parametric parts. It should be a str where numeric values are separated by spaces." 
       learning_rate_non_params: [1.0e-1, 1.0e-1]
  
-      # Number of training epochs for training the parametric model parameters per cycle.
+      # Number of training epochs of the parametric parts. It should be a strign where numeric values are separated by spaces."
       n_epochs_params: [20, 20] 
   
-      # Number of training epochs for training the non-parametric model parameters per cycle.
+      # Number of training epochs of the non-parametric parts. It should be a str where numeric values are separated by spaces."
       n_epochs_non_params: [100, 120]
-  
+    
