--- a/config/training_config.yaml
+++ b/config/training_config.yaml
@@ -82,7 +82,10 @@ training:
     # Length of one dimension of the Low-Pass (LP) filter to apply to the
     # obscurations to avoid the aliasing effect. The filter is a simple top-hat filter.
     LP_filter_length: 3
-    
+
+    # Flag to pad predictions to match output dimensions when using the masked loss.
+    pad_output_flag: True
+
     # Hyperparameters for Parametric model 
     param_hparams:
       # Random seed for Tensor Flow Initialization
@@ -126,7 +129,10 @@ training:
   # Training hyperparameters
   training_hparams:
     batch_size: 32
-         
+    
+    # Loss function to use while training. Options are: 'mask_mse' and 'mse'. Default is 'mse'.
+    loss: 'mask_mse'
+
     multi_cycle_params:
      
       # Total amount of cycles to perform.  
