Update config parameter comments to improve clarity

--- a/config/metrics_config.yaml
+++ b/config/metrics_config.yaml
@@ -1,24 +1,32 @@
 metrics:
    # Specify the type of model weights to load by entering "psf_model" to load weights of final psf model or "checkpoint" to load weights from a checkpoint callback.
   model_save_path: <enter psf_model or checkpoint>
+  
   # Choose the training cycle for which to evaluate the psf_model. Can be: 1, 2, ...
   saved_training_cycle: 2
+  
   # Metrics-only run: Specify model_params for a pre-trained model else leave blank if running training + metrics
   # Specify path to Parent Directory of Trained Model 
   trained_model_path: </path/to/parent/directory/of/trained/model>
+  
   # Name of the Trained Model Config file stored in config sub-directory in the trained_model_path parent directory
   trained_model_config: <enter name of trained model config file>
+  
   #Evaluate the monchromatic RMSE metric.
   eval_mono_metric: True
+  
   #Evaluate the OPD RMSE metric.
   eval_opd_metric: True
+  
   #Evaluate the super-resolution and the shape RMSE metrics for the train dataset.
   eval_train_shape_results_dict: True
+  
   # Name of Plotting Config file - Enter name of yaml file to run plot metrics else if empty run metrics evaluation only
   plotting_config: <enter name of plotting_config .yaml file or leave empty>
+  
   ground_truth_model:
     model_params:
-      #Model used as ground truth for the evaluation. Options are: 'ground_truth_poly' for polychromatic and 'ground_truth_physical_poly' for physical layer PSF models.
+      #PSF model used as ground truth for the evaluation. Options are: 'ground_truth_poly' for polychromatic and 'ground_truth_physical_poly' for polychromatic model with the physical layer extension PSF models.
       model_name: <ground_truth_poly or ground_truth_physical_poly>
 
       # Evaluation parameters
@@ -61,7 +69,7 @@ metrics:
       #Limits of the PSF field coordinates for the y axis.
       y_lims: [0.0, 1.0e+3]
       
-      # Hyperparameters for Parametric model 
+      # Hyperparameters for the Parametric model 
       param_hparams:
         # Random seed for Tensor Flow Initialization
         random_seed: 3877572
