Update package dependencies: tensorflow to 2.11.0; unpin tensorflow-addons, keras, and astropy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,15 +13,15 @@ description = 'A software framework to perform Differentiable wavefront-based PS
 dependencies = [
     "numpy",
     "scipy",
-    "keras==2.9.0",
-    "tensorflow==2.9.1",
-    "tensorflow-addons>=0.23.0",
+    "keras",
+    "tensorflow==2.11.0",
+    "tensorflow-addons",
     "tensorflow-estimator",
     "zernike",
     "opencv-python",
     "pillow",
     "galsim",
-    "astropy",
+    "astropy==5.0",
     "matplotlib",
     "seaborn",
 ]
