Add check of Black version in ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Install dependencies
         run: python -m pip install ".[test]"
 
+      - name: Check Black version
+        run: black --version
+      
       - name: Test with pytest
         run: python -m pytest
 
