Change tensorflow version to 2.11 and unpin astropy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,14 +14,14 @@ dependencies = [
     "numpy",
     "scipy",
     "keras",
-    "tensorflow==2.13.0",
+    "tensorflow==2.11.0",
     "tensorflow-addons",
     "tensorflow-estimator",
     "zernike",
     "opencv-python",
     "pillow",
     "galsim",
-    "astropy==5.0",
+    "astropy",
     "matplotlib",
     "seaborn",
 ]
