--- a/config/training_config.yaml
+++ b/config/training_config.yaml
@@ -25,10 +25,10 @@ training:
     pupil_diameter: 256
     
     # Flag to use Zernike prior
-    use_prior: True
+    use_prior: False
 
     # Flag to perform centroid error correction
-    correct_centroids: False
+    correct_centroids: True
     # Sigma of the window function used to compute the centroids. Default Euclid value is 2.5
     sigma_centroid_window: 2.5
 
